# Synthesizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
case/: case1.aag  case2.aag  case3.aag  case5.aag  case6.aag  newcase1.aig  newcase2.aig  newcase3.aig  newcase5.aig  newcase6.aig
result/: result1.v  result2.v  result3.v  result4.v  result5.v  result6.v
src/: CMakeLists.txt  main.cpp
src/algorithm/: CMakeLists.txt  coarsening.cpp  coarsening.hpp  refinement.cpp  refinement.hpp
src/database/: CMakeLists.txt  Hypergraph.cpp  Hypergraph.hpp  database.cpp  database.hpp  info.hpp  parser.cpp  parser.hpp  result.cpp  result.hpp
src/verilog/: Verilog.interp  VerilogBaseListener.cpp  VerilogBaseListener.h  VerilogBaseVisitor.cpp  VerilogBaseVisitor.h  VerilogLexer.cpp  VerilogLexer.h  VerilogLexer.interp  VerilogLexer.tokens  VerilogListener.cpp  VerilogListener.h  VerilogParser.cpp  VerilogParser.h  VerilogVisitor.cpp  VerilogVisitor.h
test/: case1.txt  case2.txt  case3.txt  case5.txt  case6.txt  test.txt
